fix: text properly centre aligned for large clap counts
The the text was larger than the container, it started to overflow to the right. This change ensures that it is always centred (unless > 1000px!)

fixes #17

--- a/src/applause-button.scss
+++ b/src/applause-button.scss
@@ -25,7 +25,7 @@ applause-button {
 
   .style-root {
     @include position-fill();
-    
+
     &:after {
       @include position-fill();
       content: " ";
@@ -72,18 +72,22 @@ applause-button {
       g.outline {
         visibility: hidden;
       }
-    } 
+    }
   }
 
-  
-
-  .count {
+  .count-container {
     position: absolute;
     top: -40%;
     width: 100%;
-    text-align: center;
     color: gray;
     user-select: none;
+
+    .count {
+      margin-left: 50%;
+      transform: translateX(-50%);
+      width: 1000px;
+      text-align: center;
+    }
   }
 
   g.sparkle {
@@ -117,7 +121,7 @@ applause-button {
     }
 
     @include animate-once(pulse);
-    
+
     .count {
       @include animate-once(hideThenShow);
     }
